--- a/src/main/resources/static_config/static_tenants.yml
+++ b/src/main/resources/static_config/static_tenants.yml
@@ -3,12 +3,12 @@ _sg_meta:
   type: "tenants"
   config_version: 2
 
-SG_GLOBAL:
+GLOBAL_TENANT:
   reserved: true
   hidden: true
   description: "Global tenant"
 
-SG_PRIVATE:
-  reserved: true
-  hidden: true
-  description: "Private tenant"
+#SG_PRIVATE:
+#  reserved: true
+#  hidden: true
+#  description: "Private tenant"
