--- a/src/main/resources/static_config/static_action_goups.yml
+++ b/src/main/resources/static_config/static_action_goups.yml
@@ -31,8 +31,8 @@ SGS_CRUD:
   hidden: false
   static: true
   allowed_actions:
-  - "READ"
-  - "WRITE"
+  - "SGS_READ"
+  - "SGS_WRITE"
   type: "index"
   description: "Statically defined"
 SGS_SEARCH:
@@ -42,7 +42,7 @@ SGS_SEARCH:
   allowed_actions:
   - "indices:data/read/search*"
   - "indices:data/read/msearch*"
-  - "SUGGEST"
+  - "SGS_SUGGEST"
   type: "index"
   description: "Statically defined"
 SGS_DATA_ACCESS:
@@ -51,7 +51,7 @@ SGS_DATA_ACCESS:
   static: true
   allowed_actions:
   - "indices:data/*"
-  - "CRUD"
+  - "SGS_CRUD"
   type: "index"
   description: "Statically defined"
 SGS_CREATE_INDEX:
@@ -113,7 +113,7 @@ SGS_CLUSTER_COMPOSITE_OPS:
   - "indices:data/write/bulk"
   - "indices:admin/aliases*"
   - "indices:data/write/reindex"
-  - "CLUSTER_COMPOSITE_OPS_RO"
+  - "SGS_CLUSTER_COMPOSITE_OPS_RO"
   type: "cluster"
   description: "Statically defined"
 SGS_CLUSTER_COMPOSITE_OPS_RO:
