--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,12 +20,13 @@ jobs:
             - maven-repo-v3-{{ .Branch }}-
             - maven-repo-v3-
       - run: mvn org.apache.maven.plugins:maven-dependency-plugin:3.1.1:resolve -DincludeParents=true -s settings.xml
+      - run: mvn clean install javadoc:javadoc javadoc:test-javadoc -DskipTests -Penterprise
       - run: ./smoketest.sh
       - run:
           command: |
             set -x
             
-            mvn clean install javadoc:javadoc javadoc:test-javadoc
+            
             
             cd src/test/java         
             TESTFILES="$(circleci tests glob **/*.java | circleci tests split --split-by=timings | tr -s '\n' ',')"
