--- a/sgconfig/sg_config.yml
+++ b/sgconfig/sg_config.yml
@@ -149,7 +149,7 @@ sg_config:
             usersearch: "(uid={0})"
         description: "Migrated from v6"
     do_not_fail_on_forbidden: false
-    multi_rolespan_enabled: false
+    multi_rolespan_enabled: true
     hosts_resolver_mode: "ip-only"
     transport_userrname_attribute: null
 #    auth_failure_listeners:
