--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 
   <properties>
     <sgssl.version>6.7.2-25.6-SNAPSHOT</sgssl.version>
-    <enterprise-modules.version>6.7.2--SNAPSHOT</enterprise-modules.version>
+    <enterprise-modules.version>6.7.2-34.0-SNAPSHOT</enterprise-modules.version>
     <elasticsearch.version>6.7.2</elasticsearch.version>
     
     <!-- deps -->
