--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 
   <properties>
     <sgssl.version>6.7.2-25.6</sgssl.version>
-    <enterprise-modules.version>6.7.2-34.0</enterprise-modules.version>
+    <enterprise-modules.version>6.7.2-34.1-SNAPSHOT</enterprise-modules.version>
     <elasticsearch.version>6.7.2</elasticsearch.version>
     
     <!-- deps -->
